@@ -1,3 +1,9 @@
+2010-06-17	Chris Johns <chrisj@rtems.org>
+
+	* libfs/src/rfs/rtems-rfs-bitmaps.h,
+	libfs/src/rfs/rtems-rfs-block-pos.h,
+	libfs/src/rfs/rtems-rfs-block.h: PR 1556. Struct clean up.
+
 2010-06-17	Ralf Corsépius <ralf.corsepius@rtems.org>
 
 	* libfs/src/rfs/rtems-rfs-file-system.h: Revert previous change.
